--- a/index.html
+++ b/index.html
@@ -47,6 +47,16 @@
             <span class="current-temperature-unit">°C </span>
           </div>
         </div>
+        <div class="weather-forecast" id="forecast">
+          <!-- <div class="weather-forecast-day-info">
+            <div class="weather-forecast-date">Mon</div>
+            <div class="weather-forecast-icon">☀️</div>
+            <div class="weather-forecast-temperatures">
+              <div class="weather-forecast-temperature">20°</div>
+              <div class="weather-forecast-temperature">9°</div>
+            </div>
+          </div> -->
+        </div>
       </main>
       <footer>
         <p>
